--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
                 <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.688 0-.437-.18-.835-.437-1.125-.29-.289-.438-.652-.438-1.063 0-1.125.75-2.062 1.969-2.062H17c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/>
             </IconWrapper>
         );
+        const Youtube = (props) => (
+            <IconWrapper {...props}>
+                <path d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17" />
+                <path d="m10 15 5-3-5-3z" />
+            </IconWrapper>
+        );
 
 
         // --- API Functions ---
@@ -1333,10 +1339,21 @@
                         <div className="max-w-5xl mx-auto">
                             <div className="text-center mb-16">
                                 <span className="text-amber-600 font-bold tracking-widest text-sm uppercase mb-2 block">Gallery</span>
-                                <h2 className="text-3xl md:text-4xl font-bold text-stone-900 mb-4 google-font flex items-center justify-center gap-3">
-                                    <Camera size={32} className="text-stone-800" />
-                                    활동사진
-                                </h2>
+                                <div className="flex flex-col md:flex-row items-center justify-center gap-4 mb-4">
+                                    <h2 className="text-3xl md:text-4xl font-bold text-stone-900 google-font flex items-center gap-3">
+                                        <Camera size={32} className="text-stone-800" />
+                                        활동사진
+                                    </h2>
+                                    <a 
+                                        href="https://www.youtube.com/@Honam-High-School/videos" 
+                                        target="_blank" 
+                                        rel="noopener noreferrer"
+                                        className="px-4 py-1.5 bg-[#FF0000] text-white rounded-full text-sm font-bold shadow-md hover:bg-red-700 transition-all hover:scale-105 flex items-center gap-2"
+                                    >
+                                        <Youtube size={18} fill="currentColor" />
+                                        호남고 공식 유투브 보러가기
+                                    </a>
+                                </div>
                                 <div className="w-16 h-1 bg-amber-500 mx-auto rounded-full"></div>
                                 <p className="text-stone-500 mt-4">다양한 AI · 디지털 활용 교육 활동 모습</p>
                             </div>
